--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -3809,6 +3809,16 @@ Not sure if the meaning of this constraint, probably it is the same as for cardi
 
 \an{not sure!}
 
+\section{Aggregations}
+
+\begin{itemize}
+  \item Some constraints require aggregating multiple values, especially via COUNT, MIN and MAX. 
+\end{itemize}
+
+\begin{DL}
+Not expressible in DL
+\end{DL}
+
 \end{document}
 
 \input{DL-Check}
