--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -779,7 +779,7 @@ validation environment in which the validation of any DSCL\footnote{the only lim
 The validation implementation of DSCLs is fully declarative,
 consisting of a mapping from a DSCL to SPIN in form of SPARQL CONSTRUCT queries.
 SPIN represents both the SPIN mappings and the SPARQL queries in RDF. 
-Within the SPIN validation environment, we fully implemented an automatic validation of all OWL 2 DL constructs. 
+Within the validation environment, we fully implemented an automatic validation of all OWL 2 DL\footbote{and therefore all OWL 2 QL constructs} constructs. 
 \an{you should mention at this point that this validation is in terms of RDF validation, because inconsistency can't be done completely}
 The implementation can be tested at \url{http://purl.org/net/rdfval-demo} and
 the OWL 2 SPIN mapping is maintained at \url{https://github.com/boschthomas/OWL2-SPIN-Mapping}.
